Tue Oct 31 14:21:11 2000  David L. Levine <levine@cs.wustl.edu>

        * bin/check_build_logs: sort the output file names, so
          that guajira's cxx build shows up first (locally).
          Limit total number of lines to 2000 to keep below
          majordomo's size limit.

Tue Oct 31 10:54:42 2000 Darrell Brunsch <brunsch@uci.edu>

        * ace/Process.i:

          Changed the CREATE_UNICODE_ENVIRONMENT section to be only
          in ACE_WIN32 environments.

Tue Oct 31 11:35:31 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/config-sunos5.5.h:
        * ace/Log_Msg.cpp: Added patches provided by Russ. Bugzilla id 710.

Tue Oct 31 08:14:33 2000  Chris Cleeland  <cleeland_c@ociweb.com>

        * wrapper_macros.GNU:

          Set defaults for exceptions, rtti, and fast to all be zero
          (0),i.e., off.  Henceforth, if you're creating a new port and
          you want exceptions to be on, you must explicitly have
          "exceptions=1" in your platform_*.GNU file.

        * platform_irix6.x_common.GNU:

          Added an "exceptions=1" directive per the comment above.

Mon Oct 30 18:56:33 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS.cpp:
        * ace/OS.h:
        * ace/OS.i:

          Changed several of the socket calls to use char instead
          of ACE_TCHAR, seeing that no OS supports anything but char.
          But I am keeping the ACE_TCHAR or dual char/wchar_t
          interfaces on classes higher up the stream.

          Methods changed are:

          - gethostbyaddr
          - gethostbyname
          - gethostbyname2
          - gethostbyaddr_r
          - gethostbyname_r
          - getprotobyname
          - getprotobyname_r
          - getservbyname
          - getservbyname_r
          - inet_addr
          - inet_ntoa
          - inet_aton
          - inet_ntop
          - inet_pton

          This should take care of a couple of things.  First we don't