@@ -1074,6 +1074,7 @@ Sandip Patel <spatel@gigabitwireless.com>
 ChenXu <chenxu_xjtu@263.net>
 Vsevolod Novikov <novikov@df.nnov.rfnet.ru>
 Brendan Corcoran <brendan@jenisys.com.au>
+Steve Sivier <Steven.Sivier@Eng.Sun.COM>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
