@@ -1,3 +1,10 @@
+Tue Oct 31 19:01:19 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* netsvcs/lib/Client_Logging_Handler.cpp (handle_input): Added
+	  a comment explaining why we don't go to heroic lengths to recv()
+ 	  all the data if it fails after the second recv().  Thanks to
+ 	  Steve Sivier <Steven.Sivier@Eng.Sun.COM> for motivating this.
+
 Tue Oct 31 14:21:11 2000  David L. Levine <levine@cs.wustl.edu>
 
         * bin/check_build_logs: sort the output file names, so
